@@ -1,3 +1,11 @@
+Fri Aug 23 2002 Nalin Dahyabhai <nalin@redhat.com>
+- Update docs on the location of the anoncvs tree.
+- Add warnings to the list of options we invoke $(CC) with.
+- Use per-user stash and stored return value names.
+
+Wed Aug  7 2002 Nalin Dahyabhai <nalin@redhat.com>
+- Treat PAM_REFRESH_CRED like PAM_REINITIALIZE_CRED.  From Jason Heiss.
+
 Fri May 24 2002 Nalin Dahyabhai <nalin@redhat.com>
 - Fix a parser bug, pointed out by Balazs GAL.
 
